--- a/ui/website/src/allBlocks/BlogContent/BlogContent.css
+++ b/ui/website/src/allBlocks/BlogContent/BlogContent.css
@@ -52,18 +52,19 @@
 }
 
 
-.blogfb{
-  /*background-color: #f00;*/
+.fbBtn{
+  border: none;
+  background-color: transparent;
 }
 .blogImgContainerInner:hover .blogimgtext {
   /*opacity: 1;*/
 }
 
-.middle .blogfb a:hover, .middle .blogtwit a:hover, .middle .blogLin a:hover{
+.middle .blogfb .fb:hover, .middle .blogtwit a:hover, .middle .blogLin a:hover{
   color: #009de2;
 }
 
-.middle .blogfb a, .middle .blogtwit a, .middle .blogLin a{
+.middle .blogfb .fb, .middle .blogtwit a, .middle .blogLin a{
   color: #fff;
   font-weight: bold;
   font-size: 22px;
@@ -77,12 +78,12 @@
   padding: 12px 0px 0px 0px;
   right: 60px;
 }
-.middle .blogfb a{
+.middle .blogfb .fb{
   position: absolute;
    /*left: 42%; */
   /*top: 5px;*/
   padding: 6px 0px 0px 0px;
-  right: 40px;
+  right: 35px;
 }
 .middle .blogLin a{
   position: absolute;
