--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -125,7 +125,7 @@ nav a {
   font-size: 15px;
   line-height: 35px;
   text-decoration: none;
-  text-transform: capitalize;
+  /*text-transform: capitalize;*/
   font-weight: bold;
 }
 .headerTitle {
