--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -992,7 +992,7 @@ height: 90px;
   right: 493px;
   top: 232px;
   height: 221px;
-  opacity: 1;
+  /*z-index: 110;*/
 
 }
 .plantimage11{
@@ -1001,7 +1001,7 @@ height: 90px;
   right: 320px;
   top: 159px;
   height: 221px;
-  opacity: 0.8;
+  opacity: 1;
 
 }
 .waterimg{
@@ -1048,7 +1048,7 @@ height: 90px;
     margin-top: -175px;
     position: absolute;
     background-size: 100% 100%;
-    opacity:1;
+    z-index: 110;
   }
 
 .new_HoverDiv  img {
@@ -1060,6 +1060,18 @@ height: 90px;
        -webkit-animation: rotation 45s infinite linear;
 }
 .new_HoverDiv3  img {
+    
+       -webkit-animation: rotation 45s infinite linear;
+}
+.new_HoverDiv4  img {
+    
+       -webkit-animation: rotation 45s infinite linear;
+}
+.new_HoverDiv5  img {
+    
+       -webkit-animation: rotation 45s infinite linear;
+}
+.new_HoverDiv6  img {
     
        -webkit-animation: rotation 45s infinite linear;
 }
@@ -1098,7 +1110,7 @@ height: 90px;
       opacity: 1;
 }
 
-.plantimage1:hover  {
+.plantimage1fv:hover  {
       opacity: 1;
 }
 .nexttogasimage:hover{
@@ -1116,6 +1128,7 @@ height: 90px;
 
 .plantimage11:hover  {
       opacity: 1;
+
 }
 .new_HoverDiv1 {
     display: none;
@@ -1127,6 +1140,7 @@ height: 90px;
     margin-top: -128px;
     position: absolute;
     background-size: 100% 100%;
+    z-index: 110;
     
 }
 .new_HoverDiv5 {
@@ -1134,8 +1148,8 @@ height: 90px;
     height: 224px;
     width: 228px;
     border-radius: 5px;
-    background-image: url(/images/newbanner_img14.png);
-    margin-left: 27px;
+    /*background-image: url(/images/newbanner_img14.png);*/
+    margin-left: -48px;
     margin-top: -120px;
     position: absolute;
     background-size: 100% 100%;
@@ -1163,7 +1177,7 @@ height: 90px;
     margin-top: -130px;
     position: absolute;
     background-size: 100% 100%;
-    opacity: 1;
+    z-index: 110;
     
 }
 .new_HoverDiv4 {
@@ -1171,11 +1185,13 @@ height: 90px;
     height: 250px;
     width: 250px;
     border-radius: 5px;
-    background-image: url(/images/newbanner_img14.png);
+    /*background-image: url(/images/newbanner_img14.png);*/
     margin-left: 11px;
     margin-top: -143px;
     position: absolute;
     background-size: 100% 100%;
+    opacity: 1;
+    z-index: 1000000;
     
 }
 .new_HoverDiv6 {
@@ -1183,11 +1199,12 @@ height: 90px;
     height: 240px;
     width: 240px;
     border-radius: 5px;
-    background-image: url(/images/newbanner_img14.png);
+    /*background-image: url(/images/newbanner_img14.png);*/
     margin-left: -24px;
     margin-top: -166px;
     position: absolute;
     background-size: 100% 100%;
+    z-index: 110;
     
 }
 .new_HoverDiv7 {
@@ -1217,28 +1234,28 @@ height: 90px;
       cursor: pointer;
       opacity: 1;
 }*/
-.nexttogasimage:hover .new_HoverDiv5 {
+/*.nexttogasimage:hover .new_HoverDiv5 {
       display: block ! important;
       cursor: pointer;
       opacity: 1;
-}
-.plantimage11:hover .new_HoverDiv4  {
+}*/
+/*.plantimage11:hover .new_HoverDiv4  {
       display: block ! important;
       cursor: pointer;
       opacity: 1;
-}
+}*/
 .petrolimage1:hover .new_HoverDiv2{
    display: block ! important;
    cursor: pointer;
   opacity: 1;
 
 }
-.waterimg2:hover .new_HoverDiv6{
+/*.waterimg2:hover .new_HoverDiv6{
    display: block ! important;
    cursor: pointer;
    opacity: 1;
 
-}
+}*/
 .waterimg:hover .bannerContainer1{
   opacity: 0.7;
 }
@@ -1257,18 +1274,22 @@ height: 90px;
   text-align: center;
 }
 .newhovertxt_6{
-  margin-top: 78px;
-  margin-left: 62px;
+  margin-top: -153px;
+  margin-left: 68px;
   font-size: 11px;
   padding-left: 10px;
   text-align: center;
+  position: absolute;
+  width: 76px;
 }
 .newhovertxt_8{
-  margin-top: 79px;
-    margin-left: 38px;
+    margin-top: -155px;
+    margin-left: 60px;
     font-size: 11px;
     padding-left: 10px;
     text-align: center;
+    width: 85px;
+    position: absolute;
 }
 .newhovertxt_1{
   margin-top: -173px;
@@ -1280,11 +1301,13 @@ height: 90px;
   width: 101px;
 }
 .newhovertxt_4{
-    margin-top: 77px;
+    margin-top: -176px;
     margin-left: 65px;
     font-size: 11px;
+    width: 103px;
     /* padding-left: 10px; */
     text-align: center;
+    position: absolute;
 }
 .newhovertxt_5{
   margin-top: 78px;
@@ -1322,14 +1345,14 @@ height: 90px;
 .servicekbtnarrow2{
     margin-left: 98px;
     color: #000;
-    margin-top: -7px;
+    margin-top: -93px;
     font-size: 13px;
     position: absolute;
 }
 .servicekbtnarrow3 {
     margin-left: 108px;
     color: #000;
-    margin-top: -88px;
+    margin-top: -97px;
     font-size: 13px;
     position: absolute;
 }
@@ -1341,10 +1364,9 @@ height: 90px;
     position: absolute;
 }
 .servicekbtnarrow5 {
-    margin-left: 139px;
+    left: 124px;
     color: #000;
-    margin-top: -105
-    px;
+    top:164px;
     font-size: 13px;
     position: absolute;
 }
@@ -1356,9 +1378,9 @@ height: 90px;
     position: absolute;
 }
 .servicekbtnarrow8 {
-    margin-left: 96px;
+    left: 96px;
     color: #000;
-    margin-top: -4px;
+    top: 133px;
     font-size: 13px;
     position: absolute;
 }
@@ -1431,7 +1453,17 @@ height: 90px;
 }
 .ripplebox1:hover{
   cursor: pointer;
-}.ripplebox2:hover{
+}
+.ripplebox2:hover{
+  cursor: pointer;
+}
+.ripplebox3:hover{
+  cursor: pointer;
+}
+.ripplebox4:hover{
+  cursor: pointer;
+}
+.ripplebox5:hover{
   cursor: pointer;
 }
 
@@ -1444,7 +1476,7 @@ height: 90px;
   position: absolute;
   left: 51px;
   top: -24px;
-  z-index: 10000000;
+  /*z-index: 10000000;*/
 
 }
 .ripplebox1 {
@@ -1466,6 +1498,36 @@ height: 90px;
     position: absolute;
     left: 95px;
     top: -18px;
+  }
+   .ripplebox3 {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 109px;
+    top: -9px;
+  }
+   .ripplebox4 {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 42px;
+    top: -20px;
+  }
+   .ripplebox5 {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 71px;
+    top: -10px;
   }
 .ripplebox span{
   position: absolute;
@@ -1494,6 +1556,34 @@ height: 90px;
   animation: animate 6s linear infinite;
   animation-delay: calc(-1.5s * var(--i));
 }
+.ripplebox3 span{
+  position: absolute;
+  box-sizing: border-box;
+  background:rgba(255,140,0,0.50); 
+  /*border:2px solid rgb(255,69,0);*/
+  border-radius: 50%;
+  animation: animate 6s linear infinite;
+  animation-delay: calc(-1.5s * var(--i));
+}
+.ripplebox4 span{
+  position: absolute;
+  box-sizing: border-box;
+  background:rgba(255,140,0,0.50); 
+  /*border:2px solid rgb(255,69,0);*/
+  border-radius: 50%;
+  animation: animate 6s linear infinite;
+  animation-delay: calc(-1.5s * var(--i));
+}
+.ripplebox5 span{
+  position: absolute;
+  box-sizing: border-box;
+  background:rgba(255,140,0,0.50); 
+  /*border:2px solid rgb(255,69,0);*/
+  border-radius: 50%;
+  animation: animate 6s linear infinite;
+  animation-delay: calc(-1.5s * var(--i));
+}
+
 @keyframes animate{
   0%{
     width: 0px;
@@ -1509,17 +1599,12 @@ height: 90px;
 }
 .hover_close
 {
-    position: absolute;
-    top: 25px;
-    left: 195px;
-    /* background-color: #fff; */
-    border-radius: 15px;
-    width: 19px;
-    height: 19px;
+   position: absolute;
+    top: 15px;
+    left: 222px;
     color: #fff;
-    font-size: 25px;
-    padding-top: 2px;
-    padding-left: 3px;
+    font-size: 33px;
+    z-index: 110;
   }
   .hover_close:hover{
     cursor: pointer;
@@ -1555,7 +1640,369 @@ svg {
     margin-left: 100px;
 
 }
+.banner-cover{
+  background-color: #0f0f0f;
+  position: absolute;
+  height: 43em;
+  opacity: 0.6;
+  display: none;
+  z-index: 10;
+}
+.circle_wrapper {
+  border-top-left-radius: 500px;
+  border-top-right-radius: 500px;
+  width: 500px; height: 250px;
+  overflow: hidden;
+  border: 3px dashed gold;
+  border-bottom: none;
+}
+.circle_wrapper:after {
+  content: '';
+  display: block;
+  width: 100px; height: 100%;
+  background: gold;
+  -webkit-animation: fill 7s linear infinite;
+  animation: fill 7s linear infinite;
+}
+@-webkit-keyframes fill {
+  from { width: 0; }
+  to { width: 100%; }
+}
+@keyframes fill {
+  from { width: 0; }
+  to { width: 100%; }
+}
+
+.mini_circle {
+  border-top-left-radius: 500px;
+  border-top-right-radius: 500px;
+  width: 500px; height: 250px;
+  overflow: hidden;
+  /*border: 3px dashed gold;*/
+  border-bottom: none;
+}
+.mini_circle:after {
+  content: '';
+  display: block;
+  width: 100px; height: 100%;
+  background: #fff;
+  -webkit-animation: fill 7s linear infinite;
+  animation: fill 7s linear infinite;
+}
+@-webkit-keyframes fill {
+  from { width: 0; }
+  to { width: 100%; }
+}
+@keyframes fill {
+  from { width: 0; }
+  to { width: 100%; }
+}
+ .page-wrap {
+   position: absolute;
+   top: 187px;
+   left: 123px;
+}
+ .gauge-wrapper {
+   position: relative;
+   -webkit-transform: translate3d(0, 0, 0);
+   transform: translateZ(0);
+   -webkit-backface-visibility: hidden;
+   -webkit-perspective: 1000;
+   backface-visibility: hidden;
+   perspective: 1000;
+}
+ .gauge2, .gauge1 {
+   position: absolute;
+   top: 33px;
+   left: 25px;
+   width: 400px;
+   height: 400px;
+}
+ .box-wrap {
+   height: 113px;
+   width: 226px;
+   overflow: hidden;
+   position: relative;
+}
+ .box {
+   transition: 1s all;
+   top: 0px;
+   left: 0px;
+   position: absolute;
+   width: 200px;
+   height: 200px;
+   border: 13px solid #2f87c3;
+   border-radius: 50%;
+   clip: rect(0, 300px, 113px, 0px);
+   -webkit-transform: rotate(-180deg);
+}
+ .gauge2 {
+   top: 23px;
+   left: 23px;
+}
+ .gauge2 .box {
+   border: 13px solid #2ecc71;
+   width: 154px;
+   height: 154px;
+   clip: rect(0, 231px, 90px, 0px);
+}
+ .gauge2 .box-wrap {
+   height: 90px;
+   width: 200px;
+}
 
 
 
+
+.chart-skills {
+  margin: 0 auto;
+  padding: 0;
+  list-style-type: none;
+}
+
+.chart-skills *,
+.chart-skills::before {
+  box-sizing: border-box;
+}
+
+
+/* CHART-SKILLS STYLES
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.chart-skills {
+  position: relative;
+  width: 311px;
+  height: 202px;
+  overflow: hidden;
+  left: 44px;
+  top: 38px;
+}
+
+.chart-skills::before,
+.chart-skills::after {
+  position: absolute;
+}
+
+.chart-skills::before {
+  content: '';
+  width: inherit;
+  height: inherit;
+  /*border: 45px solid rgba(211, 211, 211, .3);*/
+  border-bottom: none;
+  border-top-left-radius: 175px;
+  border-top-right-radius: 175px;
+}
+
+.chart-skills::after {
+  content: '';
+  left: 50%;
+  bottom: 10px;
+  transform: translateX(-50%);
+  transform: translateY(-50%);
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: cadetblue;
+}
+
+.chart-skills li {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: inherit;
+  height: inherit;
+  border: 4px dashed;
+  border-top: none;
+  border-bottom-left-radius: 175px;
+  border-bottom-right-radius: 175px;
+  transform-origin: 50% 0;
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  animation-fill-mode: forwards;
+  animation-duration: 6s;
+  animation-timing-function: linear;
+}
+
+
+.chart-skills li:nth-child(4) {
+  z-index: 1;
+  border-color: orange;
+  animation-name: rotate-four;
+  -webkit-animation: rotation 8s infinite linear;
+
+}
+
+.chart-skills span {
+  position: absolute;
+  font-size: .85rem;
+  backface-visibility: hidden;
+  animation: fade-in .4s linear forwards ;
+}
+
+.chart-skills li:nth-child(1) span {
+  top: 5px;
+  left: 10px;
+  transform: rotate(-21.6deg);
+}
+
+.chart-skills li:nth-child(2) span {
+  top: 20px;
+  left: 10px;
+  transform: rotate(-79.2deg);
+  animation-delay: .4s;
+}
+
+.chart-skills li:nth-child(3) span {
+  top: 18px;
+  left: 10px;
+  transform: rotate(-140.4deg);
+  animation-delay: .8s;
+}
+
+.chart-skills li:nth-child(4) span {
+  top: 10px;
+  left: 10px;
+  /*animation:  truckanim 10s linear  infinite;*/
+  transform: rotate(360deg);
+  -webkit-animation: rotation1 2s infinite linear;
+}
+
+/*2nd acr css*/
+ .chart-skills1 {
+  margin: 0 auto;
+  padding: 0;
+  list-style-type: none;
+}
+
+.chart-skills1 *,
+.chart-skills1::before {
+  box-sizing: border-box;
+}
+
+
+/* CHART-SKILLS STYLES
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.chart-skills1 {
+    position: relative;
+    width: 311px;
+    height: 198px;
+    overflow: hidden;
+    left: 17px;
+    top: 237px;
+}
+
+.chart-skills1::before,
+.chart-skills1::after {
+  position: absolute;
+}
+
+.chart-skills1::before {
+  content: '';
+  width: inherit;
+  height: inherit;
+  /*border: 45px solid rgba(211, 211, 211, .3);*/
+  border-bottom: none;
+  border-top-left-radius: 175px;
+  border-top-right-radius: 175px;
+}
+
+.chart-skills1::after {
+  content: '';
+  left: 50%;
+  bottom: 10px;
+  transform: translateX(-50%);
+  transform: translateY(-50%);
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: cadetblue;
+}
+
+.chart-skills1 li {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: inherit;
+  height: inherit;
+  border: 4px dashed;
+  border-top: none;
+  border-bottom-left-radius: 175px;
+  border-bottom-right-radius: 175px;
+  transform-origin: 50% 0;
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  animation-fill-mode: forwards;
+  animation-duration: 6s;
+  animation-timing-function: linear;
+}
+
+
+.chart-skills1 li:nth-child(4) {
+  z-index: 1;
+  border-color: orange;
+  animation-name: rotate-four;
+  -webkit-animation: rotation 8s infinite linear;
+  animation-delay: 8s;
+
+}
+
+.chart-skills1 span {
+  position: absolute;
+  font-size: .85rem;
+  backface-visibility: hidden;
+  animation: fade-in .4s linear forwards ;
+}
+
+.chart-skills1 li:nth-child(1) span {
+  top: 5px;
+  left: 10px;
+  transform: rotate(-21.6deg);
+}
+
+.chart-skills1 li:nth-child(2) span {
+  top: 20px;
+  left: 10px;
+  transform: rotate(-79.2deg);
+  animation-delay: .4s;
+}
+
+.chart-skills1 li:nth-child(3) span {
+  top: 18px;
+  left: 10px;
+  transform: rotate(-140.4deg);
+  animation-delay: .8s;
+}
+
+.chart-skills1 li:nth-child(4) span {
+  top: 10px;
+  left: 10px;
+  animation-delay:10s;
+  /*animation:  truckanim 10s linear  infinite;*/
+  transform: rotate(360deg);
+  -webkit-animation: rotation1 2s infinite linear;
+}
+
+
+@-webkit-keyframes rotation1 {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(359deg);
+    }
+}
+
+
+/* ANIMATIONS
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+
+
+@keyframes rotate-four {
+  from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(180deg);
+    }
+}
 
