--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -855,6 +855,7 @@ height: 90px;
   right: 71px;
   top: 100px;
   height: 168px;
+  animation: slide-right 4s ;
   /*z-index: 110;*/
   /*opacity: 0.9;*/
 }
@@ -961,16 +962,19 @@ height: 90px;
   right: 153px;
   top: 429px;
   height: 168px;
+  animation: slide-right 4s;
 
 }
 .nexttogasimage{
    position: absolute;
+   animation: slide-right 4s;
    /*left: 968px;*/
   bottom: 0px;
   right: 562px;
   top: 449px;
   /*z-index: 110;*/
   height: 168px;
+  z-index: 5;
   /*opacity: 0.9;*/
 }
 .petrolimage{
@@ -979,6 +983,8 @@ height: 90px;
   right: 126px;
   top: 247px;
   height: 221px;
+  animation: slide-right 4s;
+
 
 }
 .petrolimage1{
@@ -986,6 +992,7 @@ height: 90px;
   right: 323px;
   top: 332px;
   height: 221px;
+  animation: slide-right 4s ;
    /*opacity: 0.7;*/
 
 }
@@ -995,6 +1002,8 @@ height: 90px;
   right: 493px;
   top: 232px;
   height: 221px;
+  animation: slide-right 4s ;
+
   /*z-index: 110;*/
 
 }
@@ -1004,6 +1013,7 @@ height: 90px;
   right: 320px;
   top: 159px;
   height: 221px;
+  animation: slide-right 4s ;
   /*opacity: 1;*/
 
 }
@@ -1013,11 +1023,19 @@ height: 90px;
   left: 65px;
   top: 258px;
   height: 221px;
+  animation: slide-right 4s ease-out;
   /*opacity:1;*/
   /*z-index: 110;*/
 }
 .waterimg:hover{
   z-index: 120;
+  
+}
+.scaleimage:hover{
+  -ms-transform: scale(1.2); /* IE 9 */
+  -webkit-transform: scale(1.2); /* Safari 3-8 */
+  transform: scale(1.2); 
+
 }
 .boat_img2:hover{
   z-index: 120;
@@ -1028,6 +1046,7 @@ height: 90px;
   left: 221px;
   top: 127px;
   height: 221px;
+   animation: slide-right 4s
   /*z-index: 110;*/
   /*opacity:1;*/
 
@@ -1038,6 +1057,7 @@ height: 90px;
   left: 297px;
   top: 320px;
   height: 221px;
+  animation: slide-right 4s ;
   /*z-index: 110;*/
   /*opacity: 1;*/
 
@@ -1047,6 +1067,7 @@ height: 90px;
   top: 77%;
   left: 13%;
   height: 221px;
+  animation: slide-right 4s
   /*z-index: 110;*/
   /*opacity: 0.9;*/
 
@@ -1189,6 +1210,7 @@ height: 90px;
     margin-top: -101px;
     position: absolute;
     background-size: 100% 100%;
+    z-index:200;
     
 }
 .new_HoverDiv3 {
@@ -1241,6 +1263,7 @@ height: 90px;
     margin-top: -128px;
     position: absolute;
     background-size: 100% 100%;
+    z-index: 250;
     
 }
 .oilimage:hover .new_HoverDiv7  {
@@ -2167,6 +2190,40 @@ div.drop-container:after {
     /*top: -20%;*/
     /*opacity: 0;*/
   }
+}
+
+/*slide objects*/
+@-webkit-keyframes slide-right {
+
+  0% {
+
+    position: absolute;
+    bottom: 0px;
+    right: 493px;
+    top: 232px;
+    -webkit-transform: translateX(150px);
+            transform: translateX(150px);
+  }
+  100% {
+    -webkit-transform: translateX(300px);
+            transform: translateX(300px);
+  }
+}
+@keyframes slide-right {
+  0% {
+    -webkit-transform: translateX(-40px);
+            transform: translateX(-40px);
+  }
+  100% {
+    -webkit-transform: translateX();
+            transform: translateX();
+  }
+}
+
+.slide-right {
+
+  -webkit-animation: slide-right 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+   animation: slide-right 1.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
 
